# Bmp2Excel-Image-Converter

./: .gitignore  BMP2EXCEL.cpp  BMP2EXCEL.hpp  Byte2Int.cpp  Byte2Int.hpp  CMakeLists.txt  LICENSE  README.md  main.cpp
BMP2Excel/: Byte2Int.cpp  Byte2Int.hpp  CMakeLists.txt  main.cpp
